kubernetes/neo/apps/default/corsproxy/app/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-svc-corsproxy
spec:
  hosts:
  - corsproxy.default.svc.cluster.local
  exportTo:
  - "."
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
  - number: 8080
    name: tcp-corsproxy
    protocol: TCP
  endpoints:
  - address: 192.168.20.75
